# FLOODGUARD

./: .dockerignore  .gitignore  .replit  BLACK_FORMATTING_FIXED.md  CICD_DEPLOYMENT_GUIDE.md  CI_FIXES_APPLIED.md  DOCKER_SETUP.md  Dockerfile  GITHUB_SETUP.md  README.md  RUFF_PYTEST_FIXES.md  api_routes.py  database.py  dev_server.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-helper.ps1  docker-helper.sh  main.py  mock_data.py  models.py  pyproject.toml  replit.md  seed_data.py
.github/workflows/: main.yml
attached_assets/: Pasted-Project-Goal-Build-an-MVP-for-a-Flood-Monitoring-and-Simulation-Web-Application-for-the-Punjab-Regi-1757676703369_1757676703374.txt
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: index.css
frontend/src/components/: AlertPanel.tsx  Dashboard.tsx  FloodMap.tsx  LayerControls.tsx
frontend/src/utils/: api.ts
tests/: test_main.py
