[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "folium>=0.20.0",
    "geoalchemy2>=0.18.0",
    "geojson>=3.2.0",
    "geopandas>=1.1.1",
    "psycopg2-binary>=2.9.10",
    "rasterio>=1.4.3",
    "shapely>=2.1.1",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]
